Refs #76. Fixed css layout issue.

--- a/teraserver/easyrtc/static/css/teraplus.css
+++ b/teraserver/easyrtc/static/css/teraplus.css
@@ -138,7 +138,7 @@ video {
 	position: absolute;
 	bottom: 5px;
 	max-height: 48px;
-	width: 100%;
+	width: 15%;
 	float: left;
 	margin-left:10px;
 	z-index: 3;
